[gd_scene load_steps=2 format=3 uid="uid://dnjg5tsvbf1d5"]

[ext_resource type="Script" uid="uid://dlr8b63hul033" path="res://Menus/pause_menu.gd" id="1_i2531"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2531")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -200.0
offset_right = 130.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -138.0
offset_right = 66.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2

[node name="EditorPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer/EditorPanel"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/EditorPanel"]
layout_mode = 2
text = "Save Map"

[node name="TestButton" type="Button" parent="Panel/VBoxContainer/EditorPanel"]
layout_mode = 2
text = "Test Race"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/EditorPanel"]
layout_mode = 2
text = "Quit to Menu"

[node name="RacingPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer/RacingPanel"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/RacingPanel"]
layout_mode = 2
text = "Restart"

[node name="ReturnButton" type="Button" parent="Panel/VBoxContainer/RacingPanel"]
layout_mode = 2
text = "Return to Editor"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/RacingPanel"]
layout_mode = 2
text = "Quit to Menu"
